2006-10-19  Tor Lillqvist  <tml@novell.com>

	* plug-ins/script-fu/tinyscheme/scheme.c
	(file_push, port_rep_from_filename): Open files in binary mode.

2006-10-19  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_draw): allow
	showing the grid for path transforms. Fixes bug #362588.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.[ch]: search script-fu.init in
	the scripts search path instead of looking for it in a hardcoded
	directory.

	* plug-ins/script-fu/script-fu-scripts.[ch]
	* plug-ins/script-fu/script-fu.c: changes needed for above change.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/script-fu-console.c: use g_fopen() from gstdio.h.

	* plug-ins/script-fu/script-fu-scripts.c: removed unused defines.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/distress-selection.scm: changed range
	for Smoothness value as suggested in bug #363381. Also fixed a typo
	in the menu label.

2006-10-19  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_area):
	fixed calculation of display area in preparation of fixing bug #362915.

	* plug-ins/common/whirlpinch.c: removed unused define.

2006-10-18  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppropwidgets.[ch]: added
	gimp_prop_expanding_frame_new() which creates a frame with a
	toggle button in the title.

	* app/tools/gimpblendoptions.c
	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangleselectoptions.c
	* app/tools/gimpselectionoptions.c: use it instead of duplicating
	this code all over the place.

2006-10-18  Michael Natterer  <mitch@gimp.org>

	Applied modified patch from Martin Nordholts which adds a "Rounded
	Corners" option to the rectangle select tool. Fixes bug #86279.

	* app/core/gimpchannel-combine.[ch]: added